[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.105", features = ["full"] }
proc-macro2 = "1.0.47"
itertools = "0.10.5"
regex = "1.7.0"
ndarray = "0.15.6"

[lib]
proc-macro = true
