[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc = { version = "*", path = "proc" }
itertools = "0.10.5"
regex = "1.7.0"
ndarray = "0.15.6"
lazy_static = "1.4.0"

[workspace]
members = ["proc"]
